--- a/assets/css/4-section/_footer.scss
+++ b/assets/css/4-section/_footer.scss
@@ -1,8 +1,5 @@
 footer {
-  background: url("/assets/img/newlogo.svg") no-repeat, url("/assets/img/hero-bg-footer.jpeg") center center;
-  background-size: 50px 50px cover;
-  background-position: 30px 50px, 50% 10%;
-  background-blend-mode: overlay, normal;
+  @extend %bg-footer; 
   
   .lockup {
     padding: 50px 30px;
