--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,5 @@
-<footer>
+<footer style="background-image: url(/assets/img/{{site.logo}}), url(/assets/img/{{site.bg-footer-img}});">
   <div class="lockup">
-    
-    <div class="logo">
-    </div>
     
     <div class="content-wrap">
       <nav>
