--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,4 @@
-<header>
-  <div class="logo">
-  </div>
-  
+<header style="background-image: url(/assets/img/{{site.logo}}), url(/assets/img/{{site.bg-header-img}});">
   <nav>
     <a href="">About Me</a>
     <a href="">Work</a>
