--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -121,3 +121,14 @@ body
   color: #666
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
+  
+h3 
+  @extend %small-bold
+  color: $accent-light
+  text-align: center
+  padding: 100px 0 30px
+@media screen and (max-width: 400px)
+  padding: 50px 0 50px
+
+
+
