--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -518,23 +518,35 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
-header nav a, header .kicker, footer .lockup .content-wrap a, h3 {
+h3 {
+  color: #3d9697;
+  text-align: center;
+  padding: 100px 0 30px; }
+
+@media screen and (max-width: 400px) {
+  padding: 50px 0 50px; }
+
+h3, header nav a, header .kicker, footer .lockup .content-wrap a {
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase; }
 
+footer {
+  background-image: url("/assets/img/newlogo.svg"), url("/assets/img/hero-bg-footer.jpeg");
+  background-repeat: no-repeat, no-repeat;
+  background-size: 50px 50px, cover;
+  background-position: 30px 50px, 50% 50%;
+  background-blend-mode: overlay, normal; }
+
+header {
+  background-repeat: no-repeat, no-repeat;
+  background-size: 50px 50px, cover;
+  background-position: 25px 15px, 50% 50%;
+  background-blend-mode: overlay, normal; }
+
 header {
   height: 450px;
-  background-image: url("/assets/img/hero-bg.jpeg");
-  background-size: cover;
-  background-position: center; }
-  header .logo {
-    background-image: url("/assets/img/newlogo.svg");
-    height: 50px;
-    width: 50px;
-    float: left;
-    margin: 10px 0 0 30px;
-    background-blend-mode: overlay; }
+  background-position: 30px 20px, 50% 50%; }
   header nav {
     float: right;
     margin: 30px 30px 0 0; }
@@ -564,36 +576,26 @@ header {
     line-height: 1;
     color: white; }
 
-footer {
-  background: url("/assets/img/newlogo.svg") no-repeat, url("/assets/img/hero-bg-footer.jpeg") center center;
-  background-size: 50px 50px cover;
-  background-position: 30px 50px, 50% 10%;
-  background-blend-mode: overlay, normal; }
-  footer .lockup {
-    padding: 50px 30px; }
-    footer .lockup::after {
-      clear: both;
-      content: "";
-      display: table; }
-    footer .lockup .content-wrap {
-      float: left;
-      margin-left: 80px; }
-      footer .lockup .content-wrap .copyright {
-        margin: 0;
-        text-transform: uppercase;
-        font-size: 12px;
-        color: rgba(0, 0, 0, 0.4); }
-      footer .lockup .content-wrap a {
-        color: rgba(0, 0, 0, 0.5);
-        display: inline-block;
-        margin-right: 30px; }
-        footer .lockup .content-wrap a:hover {
-          color: rgba(0, 0, 0, 0.7); }
-
-h3 {
-  color: #3d9697;
-  text-align: center;
-  padding: 100px 0 30px; }
+footer .lockup {
+  padding: 50px 30px; }
+  footer .lockup::after {
+    clear: both;
+    content: "";
+    display: table; }
+  footer .lockup .content-wrap {
+    float: left;
+    margin-left: 80px; }
+    footer .lockup .content-wrap .copyright {
+      margin: 0;
+      text-transform: uppercase;
+      font-size: 12px;
+      color: rgba(0, 0, 0, 0.4); }
+    footer .lockup .content-wrap a {
+      color: rgba(0, 0, 0, 0.5);
+      display: inline-block;
+      margin-right: 30px; }
+      footer .lockup .content-wrap a:hover {
+        color: rgba(0, 0, 0, 0.7); }
 
 .face-lockup {
   max-width: 780px;
@@ -614,19 +616,18 @@ h3 {
   -o-align-items: center;
   align-items: center;
   -ms-flex-align: center;
-  -webkit-box-pack: distribute;
-  -moz-box-pack: distribute;
-  box-pack: distribute;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  -ms-justify-content: space-around;
-  -o-justify-content: space-around;
-  justify-content: space-around;
-  -ms-flex-pack: distribute; }
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  -ms-justify-content: space-between;
+  -o-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: justify; }
   .face-lockup .face-img {
     height: 140px;
     width: 140px;
-    background: url("/assets/img/my-face.jpg");
     background-repeat: no-repeat;
     -webkit-order: 3;
     -ms-flex-order: 3;
