--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section>
   <h3>About Me</h3>
   <div class="face-lockup">
-    <div class="face-img" style="background-image: url(/assets/img/{{site.avatar}});"></div>
+    <div class="face-img" style= "background-image: url(/assets/img/{{site.data.layout.avatar}});"></div>
     
     <div class="icon-pencil">{% include icons/icon-pencil.html %}</div>
     <div class="icon-mouse">{% include icons/icon-mouse.html %}</div>
@@ -10,66 +10,22 @@
   </div>
   
   <div class="blurb"> <!-- Remember to add links to blurb-->
-    {{ site.blurb }}
+    {{ site.data.settings.blurb }}
   </div>
   
   <div class="skill-lockup">
+     {% for skill in site.data.settings.skills %}
+ 
+      <div class="skill-unit">
+         <div class="skill-label">{{ skill.name }}</div>
+         <div class="skill-icons skill-{{ skill.value }}">
+           <span></span><span></span><span></span><span></span><span></span>
+           <span></span><span></span><span></span><span></span><span></span>
+         </div>
+       </div>    
+ 
+     {% endfor %}
     
-    <div class="skill-unit">
-      <div class="skill-label">Communication</div>
-        <div class="skill-icons skill-10">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
-    
-    <div class="skill-unit">
-      <div class="skill-label">Organization</div>
-        <div class="skill-icons skill-7">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
-    
-    <div class="skill-unit">
-      <div class="skill-label">Learning</div>
-        <div class="skill-icons skill-9">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
-    
-   <div class="skill-unit">
-      <div class="skill-label">Planning</div>
-        <div class="skill-icons skill-8">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
-    
-    <div class="skill-unit">
-      <div class="skill-label">Presentation</div>
-        <div class="skill-icons skill-10">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
-    
-    <div class="skill-unit">
-      <div class="skill-label">Visual Design</div>
-        <div class="skill-icons skill-7">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
-    
-    <div class="skill-unit">
-      <div class="skill-label">UX Design</div>
-        <div class="skill-icons skill-7">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
-    
-    <div class="skill-unit">
-      <div class="skill-label">Programming</div>
-        <div class="skill-icons skill-8">
-          <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </div>
     
   </div>
 
