--- a/assets/css/2-base/_placeholders.scss
+++ b/assets/css/2-base/_placeholders.scss
@@ -4,17 +4,11 @@
   text-transform: uppercase;
 }
 
-%bg-footer {
-  background-image: url("/assets/img/newlogo.svg"), url("/assets/img/hero-bg-footer.jpeg");
+%bg-img {
   background-repeat: no-repeat, no-repeat;
   background-size: 50px 50px, cover;
   background-position: 30px 50px, 50% 50%;
   background-blend-mode: overlay, normal;
 }  
 
-%bg-header {
-  background-repeat: no-repeat, no-repeat;
-  background-size: 50px 50px, cover;
-  background-position: 25px 15px, 50% 50%;
-  background-blend-mode: overlay, normal;
-}  
+
