--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -531,22 +531,14 @@ h3, header nav a, header .kicker, footer .lockup .content-wrap a {
   font-size: 14px;
   text-transform: uppercase; }
 
-footer {
-  background-image: url("/assets/img/newlogo.svg"), url("/assets/img/hero-bg-footer.jpeg");
+header, footer {
   background-repeat: no-repeat, no-repeat;
   background-size: 50px 50px, cover;
   background-position: 30px 50px, 50% 50%;
   background-blend-mode: overlay, normal; }
 
 header {
-  background-repeat: no-repeat, no-repeat;
-  background-size: 50px 50px, cover;
-  background-position: 25px 15px, 50% 50%;
-  background-blend-mode: overlay, normal; }
-
-header {
-  height: 450px;
-  background-position: 30px 20px, 50% 50%; }
+  height: 450px; }
   header nav {
     float: right;
     margin: 30px 30px 0 0; }
