--- a/_includes/work.html
+++ b/_includes/work.html
@@ -6,7 +6,7 @@
       <div class="thumb-container">
 
       {% for project in site.data.settings.projects %}
-      <div class="thumb-unit" style="background-image: url(/assets/img/work/{{ project.folder }}/thumb.jpg)">
+      <div class="thumb-unit" data-folder="{{ project.folder }}" style="background-image: url(/assets/img/work/{{ project.folder }}/thumb.jpg)">
         <div class="thumb-overlay">
           <strong>{{project.name}}</strong>
         </div>
@@ -17,15 +17,8 @@
     <div class="work-wrap">
       <div class="work-container">
         <div class="work-return">{% include icons/icon-back.html %}</div>
-        <h4>Do Work</h4>
-        <div style="width:600px; height: 500px; background: #ccc;"></div>
-        <p>Eos idque option te, possit animal vix in. Dicit eruditi epicurei mei ex, quo consul dicunt detracto te</p>
-
-        <div style="width:600px; height: 500px; background: #ccc;"></div>
-        <p>Eos idque option te, possit animal vix in. Dicit eruditi epicurei mei ex, quo consul dicunt detracto te</p>
-
-        <div style="width:600px; height: 500px; background: #ccc;"></div>
-        <p>Eos idque option te, possit animal vix in. Dicit eruditi epicurei mei ex, quo consul dicunt detracto te</p>
+        <h4 class="project-title">Type International Design Talks</h4>
+        <div class="project-load"></div>
 
     </div>
     </div>
