Added {{ site.github.url }}
added {{ site.github.url }} prefix to all images paths

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header id="header" style="background-image: url(/assets/img/{{site.data.layout.logo}}), url(/assets/img/{{site.data.layout.bg-header-img}});">
+<header id="header" style="background-image: url({{ site.github.url }}/assets/img/{{site.data.layout.logo}}), url({{ site.github.url }}/assets/img/{{site.data.layout.bg-header-img}});">
   <nav>
 
     {% for item in site.data.settings.menu %}
