--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer" style="background-image: url(/assets/img/{{site.data.layout.logo}}), url(/assets/img/{{site.data.layout.bg-footer-img}});">
+<footer id="footer" style="background-image: url({{ site.github.url }}/assets/img/{{site.data.layout.logo}}), url({{ site.github.url }}/assets/img/{{site.data.layout.bg-footer-img}});">
   <div class="lockup">
     
     <div class="content-wrap">
