--- a/_includes/work.html
+++ b/_includes/work.html
@@ -6,7 +6,7 @@
       <div class="thumb-container">
 
       {% for project in site.data.settings.projects %}
-      <div class="thumb-unit" data-folder="{{ project.folder }}" style="background-image: url(/assets/img/work/{{ project.folder }}/thumb.jpg)">
+      <div class="thumb-unit" data-folder="{{site.github.url}}/work/{{ project.folder }}/" style="background-image: url({{ site.github.url}}/assets/img/work/{{ project.folder }}/thumb.jpg)">
         <div class="thumb-overlay">
           <strong>{{project.name}}</strong>
         </div>
