--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section>
   <h3>About Me</h3>
   <div class="face-lockup">
-    <div class="face-img" style= "background-image: url(/assets/img/{{site.data.layout.avatar}});"></div>
+    <div class="face-img" style= "background-image: url({{ site.github.url }}/assets/img/{{site.data.layout.avatar}});"></div>
     
     <div class="icon-pencil">{% include icons/icon-pencil.html %}</div>
     <div class="icon-mouse">{% include icons/icon-mouse.html %}</div>
